--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'de.hdodenhof:circleimageview:3.0.2'
+    implementation 'net.gotev:uploadservice:2.1'
 //    implementation 'com.etebarian:meow-bottom-navigation:1.0.0'
 }
