--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'de.hdodenhof:circleimageview:3.0.2'
-    implementation 'net.gotev:uploadservice:2.1'
+    implementation 'net.gotev:uploadservice:3.4.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 //    implementation 'com.etebarian:meow-bottom-navigation:1.0.0'
 }
