--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,14 @@
 
 
     <application
+        android:name=".Initializer"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".UploadPhotoProfile"></activity>
+        <activity android:name=".UploadPhotoProfile" />
         <activity android:name=".EditProfile" />
         <activity
             android:name=".SearchDetail"
