Fixed CV Features and Bug Minor Fixing
Fixed CV Features and Bug Minor Fixing, such as Search, Search Details, Profile, Edit Profile, Upload CV, etc.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-
     <application
         android:name=".Initializer"
         android:allowBackup="true"
@@ -15,6 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".ShowCV"></activity>
+        <activity android:name=".UploadCV" />
         <activity android:name=".UploadPhotoProfile" />
         <activity android:name=".EditProfile" />
         <activity
