--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.KevAndz.decordesign" >
+    package="com.KevAndz.decordesign">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -13,9 +13,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar" >
-        <activity android:name=".ChatRoom" >
-        </activity>
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".PostDetails"></activity>
+        <activity android:name=".PostImage" />
+        <activity android:name=".ChatRoom" />
         <activity android:name=".SendMessage" />
         <activity android:name=".ShowCV" />
         <activity android:name=".UploadCV" />
@@ -27,7 +28,7 @@
         <activity android:name=".RegisterPromptActivity" />
         <activity
             android:name=".SplashScreen"
-            android:theme="@style/SplashTheme" >
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,7 +41,7 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".LoginActivity" >
+        <activity android:name=".LoginActivity">
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
